[gd_scene load_steps=20 format=3 uid="uid://b8hjrpnw4yq4u"]

[ext_resource type="Script" path="res://Scenes/LevelSelection/LevelSelectionComponent/level_selection_component.gd" id="1_oicb0"]
[ext_resource type="Texture2D" uid="uid://bmryk4iyjjhjp" path="res://Assets/Resources/Tiles/Textures/base_tilemap.png" id="1_qxrq0"]
[ext_resource type="Texture2D" uid="uid://b352831kfmvaj" path="res://Scenes/LevelSelection/Textures/completed_level.png" id="3_d7x6e"]
[ext_resource type="FontFile" uid="uid://bhm2ik3ij1rpj" path="res://Assets/Fonts/public_pixel.otf" id="3_myg7s"]
[ext_resource type="Texture2D" uid="uid://b5x4e4sgalgxg" path="res://Scenes/LevelSelection/Textures/coin_not_collected.png" id="4_jdj5c"]
[ext_resource type="Texture2D" uid="uid://d4djclpbg5to5" path="res://Scenes/LevelSelection/Textures/coin_collected.png" id="5_u150n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dpncu"]
size = Vector2(8, 8)

[sub_resource type="Animation" id="Animation_vicoc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title/LevelTitle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-150, -27)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title/LevelTitle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_1y0wi"]
resource_name = "fade_in"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title/LevelTitle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-150, -24), Vector2(-150, -27)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title/LevelTitle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_th6dx"]
resource_name = "fade_out"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title/LevelTitle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-150, -27), Vector2(-150, -24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title/LevelTitle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ecl4k"]
_data = {
"RESET": SubResource("Animation_vicoc"),
"fade_in": SubResource("Animation_1y0wi"),
"fade_out": SubResource("Animation_th6dx")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_jfd5c"]
atlas = ExtResource("5_u150n")
region = Rect2(0, 0, 6, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ii2cm"]
atlas = ExtResource("5_u150n")
region = Rect2(6, 0, 6, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6608"]
atlas = ExtResource("4_jdj5c")
region = Rect2(0, 0, 6, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxiup"]
atlas = ExtResource("4_jdj5c")
region = Rect2(6, 0, 6, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_wsn5o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfd5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ii2cm")
}],
"loop": true,
"name": &"collected",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6608")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxiup")
}],
"loop": true,
"name": &"notcollected",
"speed": 4.0
}]

[sub_resource type="Animation" id="Animation_siavf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("completed:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_xvgaj"]
resource_name = "slide_in"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -3), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("completed:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -3), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iwgnk"]
_data = {
"RESET": SubResource("Animation_siavf"),
"slide_in": SubResource("Animation_xvgaj")
}

[node name="LevelSelectionComponent" type="Area2D"]
texture_filter = 1
script = ExtResource("1_oicb0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dpncu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_qxrq0")
region_enabled = true
region_rect = Rect2(8, 0, 8, 8)

[node name="completed" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_d7x6e")
region_rect = Rect2(8, 0, 8, 8)

[node name="Title" type="Node2D" parent="."]

[node name="LevelTitle" type="Label" parent="Title"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -27.0
offset_right = 150.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_myg7s")
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ecl4k")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 10)
sprite_frames = SubResource("SpriteFrames_wsn5o")
autoplay = "default"

[node name="intro_anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iwgnk")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
